--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
